// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Affix 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Hvor mange kroner koster det per måned?
  </label>
  <div>
    <span aria-hidden="true">
      NOK
    </span>
    <input
      id="<removed>"
      size="12"
      type="text"
    >
    <span aria-hidden="true">
      pr. mnd.
    </span>
  </div>
</ds-field>
`;

exports[`Counter 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Legg til en beskrivelse
  </label>
  <textarea
    rows="4"
    id="<removed>"
    aria-describedby="<removed>"
    style="<removed>"
  >
  </textarea>
  <p
    data-field="counter"
    data-limit="75"
    id="<removed>"
    data-label="75 tegn igjen"
    data-state="under"
  >
  </p>
</ds-field>
`;

exports[`Format 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Fødselsnummer
  </label>
  <input
    id="<removed>"
    inputmode="numeric"
    type="text"
  >
</ds-field>
`;

exports[`Position 1`] = `
<div style="<removed>">
  <div style="<removed>">
    <ds-field
      data-position="end"
      data-clickdelegatefor="<removed>"
    >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Flymodus
      </label>
      <input
        role="switch"
        id="<removed>"
        type="checkbox"
      >
    </ds-field>
    <ds-field
      data-position="end"
      data-clickdelegatefor="<removed>"
    >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Lydløs
      </label>
      <input
        role="switch"
        id="<removed>"
        type="checkbox"
      >
    </ds-field>
  </div>
</div>
`;

exports[`Preview 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    E-post
  </label>
  <div
    data-field="description"
    id="<removed>"
  >
    E-posten din brukes til å logge inn og motta varsler
  </div>
  <input
    id="<removed>"
    aria-invalid="true"
    type="text"
    value="ola nordmann@udir.no"
    aria-describedby="<removed>"
  >
  <p
    data-field="validation"
    id="<removed>"
  >
    Du må oppgi en gyldig e-postadresse
  </p>
</ds-field>
`;
